fixed layout issue

--- a/client/src/pages/SignupPage/style.css
+++ b/client/src/pages/SignupPage/style.css
@@ -32,3 +32,7 @@ h2{
     color: var(--yellow);
     background-color: var(--dark-red);
   }
+
+  #noCheck {
+    margin-bottom: 7%
+  }
